--- a/about/index.html
+++ b/about/index.html
@@ -2,8 +2,9 @@
 layout: default
 title: About
 ---
-I am shy, sensitive, inquisitive, curious, lazy, and anxious. I don't mind jokes
+<h2>A bit about myself</h2>
+<p>I am shy, sensitive, inquisitive, curious, lazy, and anxious. I don't mind jokes
 unless they are intent to be hurtful. I don't really have many friends as I consider 
 most of the people in my interactions stuck in a paradigm they themselves have no idea exists.
 my sworn enemy is anyone i consider selfish and impolite. I am open-minded and 
-always on the lookout for interesting conversations 
+  always on the lookout for interesting conversations.</p>
